--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3719,7 +3719,7 @@ dd {
   display: table; }
 .dl-horizontal dd:after {
   clear: both; }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -5609,7 +5609,7 @@ tbody.collapse.in {
   bottom: 100%;
   margin-bottom: 2px; }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto; }
@@ -6014,7 +6014,7 @@ tbody.collapse.in {
     display: table; }
   .navbar:after {
     clear: both; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar {
       border-radius: 0; } }
 
@@ -6023,7 +6023,7 @@ tbody.collapse.in {
   display: table; }
 .navbar-header:after {
   clear: both; }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .navbar-header {
     float: left; } }
 
@@ -6041,7 +6041,7 @@ tbody.collapse.in {
     clear: both; }
   .navbar-collapse.in {
     overflow-y: auto; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-collapse {
       width: auto;
       border-top: 0;
@@ -6071,7 +6071,7 @@ tbody.collapse.in {
 .container-fluid > .navbar-collapse {
   margin-right: -15px;
   margin-left: -15px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .container > .navbar-header,
     .container > .navbar-collapse,
     .container-fluid > .navbar-header,
@@ -6082,7 +6082,7 @@ tbody.collapse.in {
 .navbar-static-top {
   z-index: 1000;
   border-width: 0 0 1px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-static-top {
       border-radius: 0; } }
 
@@ -6092,7 +6092,7 @@ tbody.collapse.in {
   right: 0;
   left: 0;
   z-index: 1030; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-fixed-top,
     .navbar-fixed-bottom {
       border-radius: 0; } }
@@ -6116,7 +6116,7 @@ tbody.collapse.in {
     text-decoration: none; }
   .navbar-brand > img {
     display: block; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
       margin-left: -15px; } }
 
@@ -6140,7 +6140,7 @@ tbody.collapse.in {
     border-radius: 1px; }
   .navbar-toggle .icon-bar + .icon-bar {
     margin-top: 4px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-toggle {
       display: none; } }
 
@@ -6150,7 +6150,7 @@ tbody.collapse.in {
     padding-top: 10px;
     padding-bottom: 10px;
     line-height: 20px; }
-  @media (max-width: 767px) {
+  @media (max-width: 991px) {
     .navbar-nav .open .dropdown-menu {
       position: static;
       float: none;
@@ -6166,7 +6166,7 @@ tbody.collapse.in {
         line-height: 20px; }
         .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-nav .open .dropdown-menu > li > a:focus {
           background-image: none; } }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-nav {
       float: left;
       margin: 0; }
@@ -6224,12 +6224,12 @@ tbody.collapse.in {
       margin-left: 0; }
     .navbar-form .has-feedback .form-control-feedback {
       top: 0; } }
-  @media (max-width: 767px) {
+  @media (max-width: 991px) {
     .navbar-form .form-group {
       margin-bottom: 5px; }
       .navbar-form .form-group:last-child {
         margin-bottom: 0; } }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-form {
       width: auto;
       border: 0;
@@ -6265,13 +6265,13 @@ tbody.collapse.in {
 .navbar-text {
   margin-top: 15px;
   margin-bottom: 15px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar-text {
       float: left;
       margin-left: 15px;
       margin-right: 15px; } }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .navbar-left {
     float: left !important; }
 
@@ -6313,7 +6313,7 @@ tbody.collapse.in {
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     background-color: transparent;
     color: #555; }
-  @media (max-width: 767px) {
+  @media (max-width: 991px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #333; }
       .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -6369,7 +6369,7 @@ tbody.collapse.in {
   .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
     background-color: #090909;
     color: #fff; }
-  @media (max-width: 767px) {
+  @media (max-width: 991px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
       border-color: #090909; }
     .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
@@ -8358,6 +8358,9 @@ section {
     .content {
       padding-top: 200px; } }
 
+.no-footer-gap .content {
+  padding-bottom: 82px; }
+
 .page-body {
   margin-bottom: 40px; }
 
@@ -8687,7 +8690,7 @@ blockquote {
   margin-top: 0;
   margin-bottom: 0; }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .navbar-collapse {
     position: absolute;
     left: 20px;
@@ -8701,7 +8704,7 @@ blockquote {
     border-bottom: 1px solid rgba(102, 102, 102, 0.8); }
     .navbar-nav > li:last-of-type {
       border-bottom: none; } }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .navbar-nav {
     margin-left: 50px; } }
 .dropdown-menu {
@@ -8718,7 +8721,7 @@ blockquote {
     padding-top: 10px;
     padding-bottom: 10px;
     line-height: 20px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .open .dropdown-menu > li:first-of-type {
       border-top: none; } }
 
@@ -8835,6 +8838,14 @@ blockquote {
 
   .gallery img.coffeetable-12 {
     margin-left: -25%; } }
+/* News Item
+================================================== */
+.news-item h2 {
+  font-size: 25px;
+  line-height: 1.3;
+  border-bottom: 1px solid #333;
+  padding-bottom: 10px; }
+
 /* Header
 ================================================== */
 header {
@@ -9048,7 +9059,7 @@ footer {
   padding-bottom: 82px; }
 .home .dropdown-menu {
   background-color: rgba(255, 255, 255, 0.8); }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .home .navbar-collapse {
     background-color: rgba(255, 255, 255, 0.8); } }
 
@@ -9082,8 +9093,10 @@ footer {
   border-bottom: none; }
 
 .home-more .content {
-  padding-top: 160px;
   padding-bottom: 82px; }
+  @media (min-width: 768px) {
+    .home-more .content {
+      padding-top: 160px; } }
 
 .home-pagination {
   text-align: center; }
