--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8343,7 +8343,7 @@ body {
 section {
   margin-bottom: 80px; }
 
-.hash-tag:before {
+.docs h2:before, .docs h3:before {
   display: block;
   content: " ";
   margin-top: -120px;
@@ -9024,6 +9024,20 @@ footer {
     text-decoration: none; }
 .pager .meta-value {
   margin-top: 4px; }
+
+.page .content ul {
+  list-style: none;
+  padding: 0 0 0 23px; }
+  .page .content ul li:before {
+    float: left;
+    font-family: 'FontAwesome';
+    content: "\f192";
+    color: #999;
+    padding-right: 10px;
+    font-size: 15px;
+    margin-left: -23px; }
+  .page .content ul ul {
+    list-style: none; }
 
 /* Home page
 ================================================== */
